css/style.css
/* ... */
.navbar__link-parent {
  pointer-events: none;
}

.navbar__link-main {
  pointer-events: auto;
  display: flex;
  align-items: center;
  transition: color .1s ease-in-out;
}

.navbar__link:hover, .navbar__link.active {
  color: var(--royal-gold);
}

.navbar__link-main:active {
  color: var(--royal-gold-dark);
}

.navbar__link-main:hover svg, .navbar__link.active .navbar__link-main svg {
  transform: translateY(.125rem);
}

.navbar__link-main:active svg {
  transform: translateY(.25rem) !important;
}

.navbar__link-main svg {
  width: 1rem;
  stroke-width: 3;
  transition: transform .8s cubic-bezier(0.075, 0.820, 0.165, 1.000);
}

.navbar__link-main svg {
  margin-left: .25rem
}

/* Make sure the submenus are hidden if the navbar is too */
.headroom--unpinned .navbar__link.active .nav__submenu-inner {
  /* -webkit-filter: blur(2px);
          filter: blur(2px); */
  transform: scale(.95) translateY(2rem);
  opacity: 0;
  pointer-events: none;
}

.navbar__link.active .nav__submenu-inner {
  -webkit-filter: blur(0px);
          filter: blur(0px);
  transform: scale(1);
  opacity: 1;
  pointer-events: auto;
}

.nav__submenu-inner {
  /* By default: hide the submenu, until the parent menu is clicked. */
  /* -webkit-filter: blur(2px);
          filter: blur(2px); */
  transform: scale(.95) translateY(2rem);
  opacity: 0;
  pointer-events: none;
  transition: opacity .5s cubic-bezier(0.075, 0.820, 0.165, 1.000), transform .5s cubic-bezier(0.075, 0.820, 0.165, 1.000), -webkit-filter .2s ease-in-out;
  transition: opacity .5s cubic-bezier(0.075, 0.820, 0.165, 1.000), transform .5s cubic-bezier(0.075, 0.820, 0.165, 1.000), filter .2s ease-in-out;
  transition: opacity .5s cubic-bezier(0.075, 0.820, 0.165, 1.000), transform .5s cubic-bezier(0.075, 0.820, 0.165, 1.000), filter .2s ease-in-out, -webkit-filter .2s ease-in-out;
  transition: opacity .5s cubic-bezier(0.075, 0.820, 0.165, 1.000), transform .5s cubic-bezier(0.075, 0.820, 0.165, 1.000), filter .2s cubic-bezier(0.075, 0.820, 0.165, 1.000), -webkit-filter .2s ease-in-out;
  cursor: initial;
}

.nav__submenu {
  position: absolute;
  top: 3.5rem;
  width: 420px;
  transform: translateX(-80%);

}

.nav__submenu-inner {
  background-color: #fff;
  padding: .75rem;
  border-radius: 4px;
  box-shadow: 0 0px 1px hsla(38,20%,60%,.08),
              0 0px 2px hsla(38,20%,60%,.12),
              0 0px 4px hsla(38,20%,60%,.16),
              0 0px 8px hsla(38,20%,60%,.20);
  display: flex;
  flex-direction: column;
  font-family: 'Sen', sans-serif;
}

.nav__submenu-link {
  /* border: 1px solid red; */
  display: flex;
  padding: .75rem;
  text-decoration: none;
  color: var(--royal-gold-dark);
  transition: background-color .8s cubic-bezier(0.075, 0.820, 0.165, 1.000);
  border-radius: 4px;
}

.nav__submenu-link > img, .nav__submenu-link > svg {
  width: 3rem;
  height: 3rem;
  flex-shrink: 0;
  margin-right: 1rem;
}

.nav__submenu-link > svg {
  width: 24px;
  height: 24px;
}

.nav__submenu-title {

}

.nav__submenu-subtitle {
  font-size: .9rem;
  opacity: .7;
  line-height: 1.2rem;
  margin-top: .25rem;
}

.nav__submenu-link:hover {
  background-color: var(--royal-gold-select);
}

.nav__submenu-secondary {
  background-color: var(--royal-gold-select);
  margin: -.75rem;
  margin-top: .75rem;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  padding: .5rem;
  display: flex;
  justify-content: center;
}

.nav__submenu-secondary .nav__submenu-link {
  margin: 0 .25rem;
}

.nav__submenu-secondary svg {
  margin-right: .5rem;
  opacity: .6;
}

.navbar__hamburger {
  width: 66px;
  height: 64px;

  display: none;
  justify-content: center;
  align-items: center;
  position: relative;

  background: linear-gradient(45deg, white, var(--royal-gold-light));
  transition: box-shadow .8s cubic-bezier(0.075, 0.820, 0.165, 1.000);
  margin-right: auto;
}

.navbar__hamburger.active {
  box-shadow: inset 0 0 15px rgba(0,0,0,.2);
  /* background: linear-gradient(45deg, var(--royal-gold), var(--royal-gold-light)); */
}

.navbar__hamburger svg {
  width: 28px;
  height: 100%;

  position: absolute;
  transition: opacity .8s cubic-bezier(0.075, 0.820, 0.165, 1.000), transform .8s cubic-bezier(0.075, 0.820, 0.165, 1.000);
}

.navbar__hamburger.active svg {
  transform: rotate(-180deg);
}

.navbar__hamburger.active #icon-hamburger {
  opacity: 0;
}

.navbar__hamburger #icon-hamburger {
  opacity: 1;
}

.navbar__hamburger #icon-close {
  opacity: 0;
}

.navbar__hamburger.active #icon-close {
  opacity: 1;
}

footer {
  background-color: var(--royal-gold-darker);
  color: var(--royal-gold-light);
}

.footer-inner {
  font-size: .9em;
  padding: 4em;
  display: flex;
  justify-content: space-between;
}

.footer-inner .column {
  max-width: 28%;
  font-style: italic;
}

.footer-inner .column.main {
  flex: 2;
}

.footer-inner p {
  opacity: .5;
}

.footer-inner h3 {
  font-size: 1.15em;
  font-family: 'Sen', sans-serif;
  text-transform: uppercase;
  font-style: normal;
  color: #fff;
  letter-spacing: 1.1px;
  margin-bottom: .5em;
}

.footer-inner ul {
  margin: 0;
}

.footer-inner ul > li {
  margin-bottom: .25em;
  opacity: .5;
}

.footer-inner .inline {
  display: flex;
}

.footer-inner .social {
  width: 3em;
  height: 3em;
  margin-right: .5em;
  background-color: var(--royal-gold);
  background: linear-gradient(45deg, var(--royal-gold), var(--royal-gold-light));
  color: var(--royal-gold-dark);
  border-radius: 1337px;
  display: flex;
  justify-content: center;
  align-items: center;

  transition: box-shadow .8s cubic-bezier(0.075, 0.820, 0.165, 1.000);
}

.footer-inner .social:last-child {
  margin-right: 0;
}

.footer-inner .social:hover {
  box-shadow: 0px 0px 10px hsla(38, 80%, 60%, .5), 0px 0px 30px hsla(38, 80%, 60%, .25);
}

.footer-inner .social:hover svg {
  stroke: var(--royal-gold);
  transform: scale(.9);
}
/* ... */

